--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.453.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.10",
-    "vite": "^5.4.19"
-  }
+  "framer-motion": "^11.0.0",
+  "lucide-react": "^0.453.0",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "vite": "^5.4.19",
+  "@vitejs/plugin-react": "^4.7.0"
+},
+"devDependencies": {
+  "autoprefixer": "^10.4.18",
+  "postcss": "^8.4.35",
+  "tailwindcss": "^3.4.10"
+}
+
 }
